css/style.css
/*------------------------GLOBALES------------------------*/
* {
  box-sizing: border-box;
}
body{
  margin: 0;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #4DA193;

  font-family: verdana;
  font-style: serif;
  text-align: left;
  font-size: 20px;
}
ul {
  padding: 0;
}
li {
  list-style-type: none;
}
.contenidocentro {
  width: max-content;
  padding-top: 10%;
  padding-left: ;
}
/*------------Responsive Resolucion Smartphone-----------*/
}
@media(max-width: 320px){
  }

/*------------Responsive Resolucion Tablet---------------*/
@media(min-width: 768px){
  }

/*

/*---------------------BANNER - MENU---------------------*/
.banner {
  padding: 0;
  color: white;
  float:right;
  position:relative;
  left:-50%;
  text-align:center;
}
.banner ul {
  position:relative;
  left:50%;
}
.banner li {
  float: left;
  position: relative;
}
.barra{
  text-align: right;
  float: right;
}
.logo {
  width: 30px;
  height: 30px;
}

/*       Sory! ya se que por ahi te movi algo, pero si vamos a usar tags generales como ul o body, etc, intentemos     ponerles class o id para que solo afecte el de su pagina, si no, de esta manera, estan afectando a uls y bodys de las otras paginas (y supongo que todos vamos moviendo los elemntos de distintas formas como vamos pudiendo jaja)
ul {
  margin-left: 28%;
  margin-right: 28%;
}
*/

/*------------------PREGUNTAS FRECUENTES------------------*/
.preguntasfrecuentes {
  background-image: url(../imagenes/background/puente.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 100vh;
}
.preguntas {
  color: white;
  margin-left: 20vw;
  background: rgba(0, 0, 128, 0.5);
  width: 1200px;
}
.contenidocentro {
  padding: 200px;
}

/*---------------------ESPECIALIDADES---------------------*/
.especialidades {
  background-image: white;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 100vh;
}

/*----------------------REGISTRARSE----------------------*/
.registrarse {
  background-image: url(../imagenes/background/trago.jpeg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 100vh;
}
/*-------------------------LOGIN-------------------------*/
.loginbody {
  background-image: url(../imagenes/background/login.jpeg);
  background-size:auto;
  background-repeat: no-repeat;
  background-position: center;

}
.txtlogin{
  color: white;
}
.formulario{
  padding-top: 60px;
}

/* Perdon denuevo! lo que te explique mas arriba.
li{
  float: right;
  padding: 10px;
}
*/

li a {
  color: white;
}
.introducir {
  color: white;
}
/*------------------------FOOTER------------------------*/

.footer {
  color: #fff;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 10px;
  text-align: center;
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: 15%;
}
.icon_footer {
  height: 80px;
}
.txt_footer {
  color: white;
}

